feat: expAPI swagger
