# WACAD011-CookiesSessoesEAutenticacao-T6/expAPI/src/resources/users/users.controller.ts
@@ -12,7 +12,7 @@ const index = async (req: Request, res: Response) => {
       schema: {
         type: 'array',
         items: {
-          $ref: '#definitions/CreateUserDTO'
+          $ref: '#definitions/User'
         } 
       }
     }
@@ -39,7 +39,7 @@ const read = async (req: Request, res: Response) => {
 
     #swagger.responses[200] = {
       description: "Retorno do usuário",
-      schema: { $ref: '#definitions/CreateUserDTO' }
+      schema: { $ref: '#definitions/User' }
     }
 
     #swagger.responses[404] = {
@@ -69,6 +69,28 @@ const read = async (req: Request, res: Response) => {
 };
 
 const create = async (req: Request, res: Response) => {
+  /*
+    #swagger.summary = 'Cria um novo usuário no banco de dados.'
+    #swagger.parameters['body'] = {
+      in: 'body',
+      description: 'Dados do novo usuário a ser criado',
+      required: true,
+      schema: { $ref: '#/definitions/CreateUserDTO' }
+    } 
+    #swagger.responses[201] = {
+      description: 'O usuário foi criado com sucesso no banco de dados.',
+      schema: { $ref: '#definitions/User' }
+    }
+    
+    #swagger.responses[409] = {
+      description: 'O usuário já existe no banco de dados.'
+    }
+
+    #swagger.responses[500] = {
+      description: 'Internal server error'
+    }
+  */
+
   try {
     const user = req.body as CreateUserDTO;
     if (!(await getUserByEmail(user.email))) {
@@ -81,7 +103,32 @@ const create = async (req: Request, res: Response) => {
     res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
   }
 };
+
 const update = async (req: Request, res: Response) => {
+  /*
+    #swagger.summary = 'Atualiza os dados de um usuário existente.'
+    #swagger.parameters['id'] = {
+      description: 'Id do usuário',
+      required: true
+    }
+    #swagger.parameters['body'] = {
+      in: 'body',
+      required: true,
+      schema: { $ref: '#/definitions/CreateUserDTO' }
+    } 
+    #swagger.responses[200] = {
+      description: 'O usuário foi atualizado com sucesso.',
+      schema: { $ref: '#definitions/User' }
+    }
+    
+    #swagger.responses[404] = {
+      description: 'O usuário não existe no banco de dados.'
+    }
+
+    #swagger.responses[500] = {
+      description: 'Internal server error'
+    }
+  */
   try {
     const id = req.params.id as string;
     const user = req.body as UpdateUserDTO;
@@ -100,6 +147,27 @@ const update = async (req: Request, res: Response) => {
   }
 };
 const remove = async (req: Request, res: Response) => {
+  /* 
+    #swagger.summary = "Remove um usuário do banco de dados dado o seu id."
+    
+    #swagger.parameters['id'] = {
+      description: 'Id do usuário',
+      required: true
+    }
+
+    #swagger.responses[200] = {
+      description: 'Usuário removido com sucesso.',
+      schema: { message: "OK" }
+    }
+
+    #swagger.responses[404] = {
+      description: 'O usuário não existe no banco de dados.'
+    }
+
+    #swagger.responses[500] = {
+      description: 'Internal server error'
+    }
+  */
   const id = req.params.id as string;
 
   try {
@@ -107,7 +175,7 @@ const remove = async (req: Request, res: Response) => {
       res.status(StatusCodes.NOT_FOUND).json(ReasonPhrases.NOT_FOUND);
     } else {
       await userService.remove(id);
-      res.status(StatusCodes.OK).json(ReasonPhrases.OK);
+      res.status(StatusCodes.OK).json({ message: ReasonPhrases.OK });
     }
   } catch (err) {
     res
